# swifft-bindgen

./: Cargo.toml  rust-toolchain.toml
src/: hash.rs  lib.rs
