[package]
name = "swifft-bindgen"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
swifft = { git = "https://github.com/AndreiCravtov/libswifft-rs" }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.69"
rayon = "1.5"
wasm-bindgen-rayon = { version = "1.0" }
console_error_panic_hook = "0.1.7"
ff = "0.13.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
